// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GroupsRouter helpers extractGroups should extract groups from the exits of a groupsRouter node 1`] = `
Object {
  "id": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
  "name": "Customers",
  "type": "group",
}
`;

exports[`GroupsRouter helpers extractGroups should extract groups from the exits of a groupsRouter node 2`] = `
Object {
  "id": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
  "name": "Unsatisfied Customers",
  "type": "group",
}
`;

exports[`GroupsRouter helpers extractGroups should extract groups from the exits of a groupsRouter node 3`] = `
Object {
  "id": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
  "name": "Early Adopters",
  "type": "group",
}
`;

exports[`GroupsRouter helpers extractGroups should extract groups from the exits of a groupsRouter node 4`] = `
Object {
  "id": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
  "name": "Testers",
  "type": "group",
}
`;

exports[`GroupsRouter helpers extractGroups should extract groups from the exits of a groupsRouter node 5`] = `
Object {
  "id": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
  "name": "Subscribers",
  "type": "group",
}
`;

exports[`GroupsRouter render should render exit translations when user is translating 1`] = `""`;

exports[`GroupsRouter render should render self, children 1`] = `
Object {
  "add": false,
  "assets": GroupAssets {
    "assetType": "group",
    "assets": Object {},
    "endpoint": "/assets/groups.json",
    "idProperty": "uuid",
    "localStorage": true,
  },
  "groups": Array [
    Object {
      "id": "23ff7152-b588-43e4-90de-fda77aeaf7c0",
      "name": "Customers",
      "type": "group",
    },
    Object {
      "id": "2429d573-80d7-47f8-879f-f2ba442a1bfd",
      "name": "Unsatisfied Customers",
      "type": "group",
    },
    Object {
      "id": "cdbf9e01-aaa7-4381-8259-ee042447bcac",
      "name": "Early Adopters",
      "type": "group",
    },
    Object {
      "id": "afaba971-8943-4dd8-860b-3561ed4f1fe1",
      "name": "Testers",
      "type": "group",
    },
    Object {
      "id": "33b28bac-b588-43e4-90de-fda77aeaf7c0",
      "name": "Subscribers",
      "type": "group",
    },
  ],
  "name": "Groups",
  "placeholder": "Enter the name of an existing group...",
  "required": true,
  "searchPromptText": "Invalid group",
}
`;
